# mylib

./: .gitignore  .rsync-filter
include/: mysql_connect.h  str_from_file.hpp
lib/: CMakeLists.txt
src/: README.md  mysql_connect.c  str_from_file.cpp
